nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: microsites-pre
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx
